// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Charts /> should render properly for "Facet" 1`] = `
<div>
  {"id":"972a8ab5-cdcb-4eea-ada7-f1c88d997fed","type":"FACET"}
</div>
`;

exports[`<Charts /> should render properly for "Range" 1`] = `
<div>
  {"id":"972a8ab5-cdcb-4eea-ada7-f1c88d997fed","type":"RANGE"}
</div>
`;
